# fastFFI

./: .gitignore  BUILD  README.md  WORKSPACE  build.sh  build.xml  license_helper.pl  pom.xml  tmp_BUILD
llvm/: CMakeLists.txt  pom.xml
llvm/src/main/java/com/alibaba/fastffi/: package-info.java
llvm/src/main/java/com/alibaba/fastffi/clang/: ASTContext.java  ASTDumpOutputFormat.java  ASTUnit.java  AccessSpecDecl.java  AccessSpecifier.java  AdjustedType.java  ArrayType.java  AtomicType.java  Attr.java  AttrKind.java  AttrVec.java  AttributeCommonInfo.java  AttributedType.java  AutoType.java  BindingDecl.java  BlockDecl.java  BlockPointerType.java  BuiltinTemplateDecl.java  BuiltinType.java  CXXBaseSpecifier.java  CXXConstructorDecl.java  CXXConversionDecl.java  CXXDeductionGuideDecl.java  CXXDestructorDecl.java  CXXMethodDecl.java  CXXRecordDecl.java  CapturedDecl.java  ClassScopeFunctionSpecializationDecl.java  ClassTemplateDecl.java  ClassTemplatePartialSpecializationDecl.java  ClassTemplateSpecializationDecl.java  ComplexType.java  ConceptDecl.java  ConstantArrayType.java  ConstantMatrixType.java  ConstructorUsingShadowDecl.java  DecayedType.java  Decl.java  DeclCasting.java  DeclContext.java  (+142 more)
llvm/src/main/java/com/alibaba/fastffi/clang/tooling/: ClangTool.java  CommonOptionsParser.java  CompilationDatabase.java
llvm/src/main/java/com/alibaba/fastffi/llvm/: APFloat.java  APInt.java  APSInt.java  AddrSpaceCastInst.java  AllocaInst.java  Argument.java  ArrayType.java  AtomicCmpXchgInst.java  AtomicOrdering.java  AtomicRMWInst.java  BasicBlock.java  Binary.java  BinaryOperator.java  BitCastInst.java  BitcodeReader.java  BlockAddress.java  BranchInst.java  CallBase.java  CallBrInst.java  CallInst.java  CallingConvID.java  CastInst.java  CatchPadInst.java  CatchReturnInst.java  CatchSwitchInst.java  CharPointer.java  CleanupPadInst.java  CleanupReturnInst.java  CmpInst.java  Constant.java  ConstantAggregate.java  ConstantAggregateZero.java  ConstantArray.java  ConstantData.java  ConstantDataArray.java  ConstantDataSequential.java  ConstantDataVector.java  ConstantExpr.java  ConstantFP.java  ConstantInt.java  (+89 more)
llvm/src/main/java/com/alibaba/fastffi/llvm/cl/: OptionCategory.java
llvm/src/main/java/com/alibaba/fastffi/stdcxx/: StdString.java  StdVector.java  StdVectorLite.java  UniquePtr.java
llvm4jni/: CMakeLists.txt  COMPILECOMMAND.md  compile-commands.txt  pom.xml  run.sh
llvm4jni/doc/: dev.asc  proposal.asc
llvm4jni/src/main/java/com/alibaba/fastffi/llvm/bitcode/: BitcodeParser.java
llvm4jni/src/main/java/com/alibaba/fastffi/llvm4jni/: AbstractBytecodeGenerator.java  BytecodeVerifier.java  GEPTypeIterator.java  IndirectCallPolicy.java  InstructionOptimizer.java  JNIEnvFun.java  JNINaming.java  JavaClassCollector.java  JavaFunctionType.java  JavaKind.java  JavaNativeBytecodeGenerator.java  JavaTag.java  LLVMBaseBytecodeGenerator.java  LLVMConstantInitializerGenerator.java  LLVMIRFunctionBytecodeGenerator.java  LLVMToBytecode.java  Logger.java  Main.java  Options.java  SimpleIndirectCallPolicy.java  Universe.java  UnsupportedFunctionException.java  UnsupportedIRException.java  Utils.java  VTable.java  VTableEntry.java
llvm4jni/src/main/java/com/alibaba/fastffi/llvm4jni/body/: ClassBody.java  InputClass.java  InvokerClass.java  LibraryClass.java  LibraryMethod.java  MethodBody.java  NativeMethod.java
llvm4jni/src/main/java/com/alibaba/fastffi/llvm4jni/type/: ArrayTypeDef.java  ClassTypeDef.java  FieldTypeDef.java  MethodTypeDef.java  PrimitiveTypeDef.java  TypeDef.java  TypeDefException.java  TypeDefFactory.java
llvm4jni/src/main/java/com/alibaba/fastffi/llvm4jni/type/impl/: ArrayTypeDefImpl.java  BaseTypeDefImpl.java  (+5 more)
llvm4jni/src/test/java/com/alibaba/fastffi/llvm/: LLVMIndirectInvokerFactoryTest.java  TestUtils.java
llvm4jni/src/test/java/com/alibaba/fastffi/llvm/bitcode/: BitcodeParserTest.java
llvm4jni/src/test/java/com/alibaba/fastffi/llvm4jni/: GeneratedTestClassLoader.java  IndirectTest.java  IndirectTestStruct.java  JNINamingTest.java  LLVM4JNITest.java  LibraryLoadTest.java  LoadStoreTest.java  LoadStoreTestFFILibrary.java  MemoryOperationTest.java  MemoryOperationTestStruct.java  MiscFFILibrary.java  MiscTest.java  OperatorFFILibrary.java  OperatorTest.java  Products.java  SmokeTest.java  SwitchTestStruct.java  TestUtils.java  TypeDefTest.java  VTableTest.java  VTableTestStruct.java
llvm4jni/src/test/native/: llvm4jni_test.cc  llvm4jni_test.hpp
llvm4jni/src/test/resources/: libsimdjson.bc  smokeTest.cpp  smokeTest.hpp
samples/flatbuffers-demo/: .gitignore  CMakeLists.txt  README.md  build-flatbuffers.sh  build.xml  compile-commands.txt  pom.xml  run.sh
samples/flatbuffers-demo/src/main/java/com/alibaba/fastffi/demo/: FastFFIBenchmark.java  FlatBuffersJavaBenchmark.java  FlatBuffersMonsterBuilder.java
samples/simdjson-demo/: .gitignore  CMakeLists.txt  README.md  build.xml  compile-commands.txt  download.sh  pom.xml  run.sh
samples/simdjson-demo/src/main/java/com/alibaba/llvm4jni/simdjson/: Benchmarks.java  ErrorCode.java  Point.java  TopTweetResult.java  Tweet.java  TwitterUser.java  package-info.java
samples/simdjson-demo/src/main/native/: benchmarks.cc  benchmarks.h
test/: CMakeLists.txt  pom.xml
test/src/main/java/com/alibaba/fastffi/annotation/test/: FFIMirrorSample.java  FFIMirrorSampleWrapper.java  FullFeature.java  TestClassFunctionTemplate.java  TestFunctionTemplate.java  TestTypeMapping.java  TestTypeMappingGenericSuper.java
test/src/main/java/com/alibaba/fastffi/stdcxx/test/: CString.java  StdString.java  StdVector.java
test/src/main/native/: FullFeature.cc  FullFeature.h  ffitest.cc  ffitest.h
test/src/test/java/com/alibaba/fastffi/: FFIFactoryTest.java
test/src/test/java/com/alibaba/fastffi/annotation/test/: Assert.java  BaseTest.java  ClassFunctionTemplateTest.java  FFIMirrorSampleTest.java  FullFeatureTest.java  FunctionTemplateTest.java  TypeMappingTest.java
test/src/test/java/com/alibaba/fastffi/stdcxx/test/: CStringTest.java  StdStringTest.java  StdVectorTest.java
test/src/test/resources/: Foo.java
(+237 files in other folders)
